# pipeline_runner

./: .git-assets  .gitignore  Makefile  README.md  dry-run.sh  flake.nix  package.nix  pyproject.toml  run.sh  shell.nix
scripts/: install-hooks.sh  strict-checking.sh
src/core/: bootstrap.py  suite.py
src/lib/: __init__.py  exceptions.py  task_types.py  types.py
src/pipeline_runner/: __init__.py  __main__.py
src/pipeline_runner/core/: __init__.py  bootstrap.py  pipeline_runner.py  suite.py
src/pipeline_runner/lib/: __init__.py  declarative.py  exceptions.py  printer.py  printer_helpers.py  task_types.py  types.py
src/pipeline_runner/lib/task_types/: __init__.py  helpers.py  suite_sub_task.py  suite_task.py  suite_task_helpers.py  task.py
src/pipeline_runner/tasks/: __init__.py  example_tasks.py
src/pipeline_runner/tests/: main_test.py
src/pipeline_runner/tests/core/: pipeline_runner_test.py  pipeline_suite_test.py
src/pipeline_runner/tests/lib/exceptions/: task_error_test.py
src/pipeline_runner/tests/lib/printer/: printer_property_test.py  printer_test.py  test_printer_helpers.py
src/pipeline_runner/tests/lib/task_types/: helpers_test.py  suite_sub_task_test.py
src/pipeline_runner/tests/lib/task_types/helpers/: get_task_name.py
src/pipeline_runner/tests/lib/task_types/suite_task/: suite_task_01.py  suite_task_test.py  test_suite_task_property.py
src/pipeline_runner/tests/lib/task_types/task/: task_test.py
src/pipeline_runner/tests/lib/types/: enum_stage_test.py  typename_test.py
src/pipeline_runner/tests/tasks/: example_tasks_test.py
src/tasks/: __init__.py
tests/bootstrap/: check_nix_test.py  ensure_paths_test.py  verify_system_dependencies_test.py
tests/integration/: shell_integration_test.py
tests/lib/types/: shell_output_test.py
tests/pipeline_runner/: main_test.py
tests/pipeline_runner/core/: pipeline_runner_test.py  pipeline_suite_test.py
tests/pipeline_runner/core/bootstrap/: check_nix_test.py  ensure_paths_test.py  verify_system_dependencies_test.py
tests/pipeline_runner/integration/: shell_integration_test.py
tests/pipeline_runner/lib/declarative/: declarative_test.py
tests/pipeline_runner/lib/exceptions/: fuzzing_test.py  task_error_test.py  test_exceptions.py
tests/pipeline_runner/lib/printer/: printer_property_test.py  printer_test.py  test_printer_helpers.py
tests/pipeline_runner/lib/task_types/: helpers_test.py  suite_sub_task_test.py
tests/pipeline_runner/lib/task_types/helpers/: get_task_name_test.py
tests/pipeline_runner/lib/task_types/suite_task/: suite_task_helpers_test.py  suite_task_test.py  test_suite_task_property.py
tests/pipeline_runner/lib/task_types/task/: task_test.py
tests/pipeline_runner/lib/types/: enum_stage_test.py  shell_output_test.py  typename_test.py
tests/pipeline_runner/tasks/: example_tasks_test.py
