[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline_runner"
version = "0.1.1"
dependencies = ["pyyaml"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pipeline_runner*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/pipeline_runner"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "ANN",  # flake8-annotations
    "FA",   # flake8-future-annotations
]

[tool.ruff.lint.flake8-annotations]
# Explicitly disallow Any even inside *args and **kwargs signatures
allow-star-arg-any = false

# Force explicit return types for __init__ methods (must show -> None)
mypy-init-return = false

# Do not suppress lint errors for missing return type hints on public methods
suppress-none-returning = false

# Force type annotations on arguments even if they match dummy naming patterns
suppress-dummy-args = false

# Do not ignore files that are completely missing annotations
ignore-fully-untyped = false

[tool.ruff.lint.per-file-ignores]
"**" = [
    "ANN401",  # any-type — required for delegation patterns (*args: Any)
]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
pythonVersion = "3.13"
reportExplicitAny = "error"

