[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline_runner"
version = "0.1.1"
dependencies = ["pyyaml"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pipeline_runner*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/pipeline_runner"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
src = ["src"]
target-version = "py313"


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
   "ALL",
   # "RUF100", # Unused noqa (Flags inline ignores that are no longer needed)
   #  "PGH004", # Use of blanket noqa (Flags any raw '# noqa' without a rule code)
   #  "E",    # pycodestyle errors
   #  "W",    # pycodestyle warnings
   #  "F",    # pyflakes
   #  "I",    # isort
   #  "B",    # flake8-bugbear
   #  "UP",   # pyupgrade
   #  "A",    # flake8-builtins
   #  "C4",   # flake8-comprehensions
   #  "SIM",  # flake8-simplify
   #  "RUF",  # Ruff-specific rules
   #  "ANN",  # flake8-annotations
   #  "FA",   # flake8-future-annotations
]

[tool.ruff.lint.pylint]
max-args = 3          # Hard limit on function parameter inflation
max-statements = 30   # Enforces tiny, modular logical blocks

[tool.ruff.lint.flake8-annotations]
# Explicitly disallow Any even inside *args and **kwargs signatures
allow-star-arg-any = false

# Force explicit return types for __init__ methods (must show -> None)
mypy-init-return = false

# Do not suppress lint errors for missing return type hints on public methods
suppress-none-returning = false

# Force type annotations on arguments even if they match dummy naming patterns
suppress-dummy-args = false

# Do not ignore files that are completely missing annotations
ignore-fully-untyped = false

[tool.ruff.lint.per-file-ignores]
"**" = [
    "ANN401",  # any-type — required for delegation patterns (*args: Any)
]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
pythonVersion = "3.13"
reportExplicitAny = "error"
# Treat inline ignores as a build-breaking failure
reportUnnecessaryTypeIgnoreComment = "error"
reportUnknownVariableType = "error"
reportUnknownArgumentType = "error"

[tool.mypy]
strict = true

# Throw an error if a developer adds a '# type: ignore' comment
warn_unused_ignores = true

# Throw an error if configurations try to ignore missing modules globally
ignore_missing_imports = false

# Ensure modules without type hints are treated as errors rather than falling back to Any
disallow_untyped_defs = true
disallow_incomplete_defs = true
